// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Bar 100% Complete + Title 1`] = `
<bolt-progress-bar value="100">
  <div role="progressbar"
       class="c-bolt-progress-bar is-filled   c-bolt-progress-bar--"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="100"
       aria-label="100%"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill c-bolt-progress-bar__fill--at-max"
            style="transform: translate3d(100%, 0, 0) translate3d(-100%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      100%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`Progress Bar 100% Complete + Title 2`] = `
<div
  style=""
>
  <!---->
  
      
  <div
    aria-label="100%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    class="c-bolt-progress-bar"
    role="progressbar"
    style=""
  >
    
        
    <div
      class="c-bolt-progress-bar__track"
      style=""
    >
      
          
      <span
        class="c-bolt-progress-bar__fill c-bolt-progress-bar__fill--at-max"
        style="transform:translate3d(100%, 0, 0) translate3d(-100%, 0, 0);"
      >
        
          
      </span>
      
        
    </div>
    
        
    <div
      class="c-bolt-progress-bar__value"
      style=""
    >
      <!---->
      100%
      <!---->
    </div>
    
      
  </div>
  
    
  <!---->
</div>
`;

exports[`Progress Bar Basic Progress Bar usage 1`] = `
<bolt-progress-bar value="50">
  <div role="progressbar"
       class="c-bolt-progress-bar    c-bolt-progress-bar--"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="50"
       aria-label="50%"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(50%, 0, 0) translate3d(-100%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      50%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`Progress Bar Basic Progress Bar usage 2`] = `
<div
  style=""
>
  <!---->
  
      
  <div
    aria-label="50%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="c-bolt-progress-bar"
    role="progressbar"
    style=""
  >
    
        
    <div
      class="c-bolt-progress-bar__track"
      style=""
    >
      
          
      <span
        class="c-bolt-progress-bar__fill"
        style="transform:translate3d(50%, 0, 0) translate3d(-100%, 0, 0);"
      >
        
          
      </span>
      
        
    </div>
    
        
    <div
      class="c-bolt-progress-bar__value"
      style=""
    >
      <!---->
      50%
      <!---->
    </div>
    
      
  </div>
  
    
  <!---->
</div>
`;

exports[`Progress Bar Custom Label Text 1`] = `
<bolt-progress-bar value="2"
                   min="1"
                   max="6"
                   value-format="step"
>
  <div role="progressbar"
       class="c-bolt-progress-bar    c-bolt-progress-bar--"
       aria-valuemin="1"
       aria-valuemax="6"
       aria-valuenow="2"
       aria-label="2 of 6"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(20%, 0, 0) translate3d(-100%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      2 of 6
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`Progress Bar Custom Label Text 2`] = `
<div
  style=""
>
  <!---->
  
      
  <div
    aria-label="2 of 6"
    aria-valuemax="6"
    aria-valuemin="1"
    aria-valuenow="2"
    class="c-bolt-progress-bar"
    role="progressbar"
    style=""
  >
    
        
    <div
      class="c-bolt-progress-bar__track"
      style=""
    >
      
          
      <span
        class="c-bolt-progress-bar__fill"
        style="transform:translate3d(20%, 0, 0) translate3d(-100%, 0, 0);"
      >
        
          
      </span>
      
        
    </div>
    
        
    <div
      class="c-bolt-progress-bar__value"
      style=""
    >
      <!---->
      2 of 6
      <!---->
    </div>
    
      
  </div>
  
    
  <!---->
</div>
`;

exports[`Progress Bar Progress Bar w/o Shadow DOM 1`] = `
<bolt-progress-bar no-shadow
                   value="50"
>
  <div role="progressbar"
       class="c-bolt-progress-bar    c-bolt-progress-bar--"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="50"
       aria-label="50%"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(50%, 0, 0) translate3d(-100%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      50%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`Progress Bar Progress Bar w/o Shadow DOM 2`] = `
<div
  style=""
>
  <bolt-progress-bar
    no-shadow=""
    style=""
    value="50"
  >
    <!---->
    
      
    <div
      aria-label="50%"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="c-bolt-progress-bar"
      role="progressbar"
      style=""
    >
      
        
      <div
        class="c-bolt-progress-bar__track"
        style=""
      >
        
          
        <span
          class="c-bolt-progress-bar__fill"
          style="transform:translate3d(50%, 0, 0) translate3d(-100%, 0, 0);"
        >
          
          
        </span>
        
        
      </div>
      
        
      <div
        class="c-bolt-progress-bar__value"
        style=""
      >
        <!---->
        50%
        <!---->
      </div>
      
      
    </div>
    
    
    <!---->
  </bolt-progress-bar>
</div>
`;
